--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Memory Game</h1>
+    <div class="gameBoard"></div>
+    <div class="gameControls">
+      <button class="resetGame">Reset Game</button>
+    </div>
+  </body>
 </html>
